[package]
name = "hyparview"
version = "0.1.0"
authors = ["Merlijn Boogerd <mboogerd@xebia.com>"]

[dependencies]
rand = "0.5.5"
actix = "0.7.4"
tokio = "0.1.8"
tokio-timer = "0.2.6"
futures = "0.1.24"
futures-core = "0.2.1"
futures-channel = "0.2.1"
maplit = "1.0.1"
libp2p = { git = "https://github.com/libp2p/rust-libp2p" }